syntax = "proto3";
package com.example.grpc;

message GeneratorRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message GeneratorResponse {
  int32 generatedValue = 1;
}

service GeneratorService {
  rpc generate(GeneratorRequest) returns (stream GeneratorResponse);
}